# ratesb_python

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  Changelog.md  MANIFEST.in  README.md  benchmark.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python_tests.yml  update-changelog.yml
benchmark/: README.md  benchmark.py  benchmark_revised.py  requirements.txt  sbmlk_wrapper.py
benchmark/benchmark_env/: pyvenv.cfg
benchmark/models/: bidirectional_bidr21.xml  bidirectional_bidr_a11.xml  branched_network.xml  enzyme_cascade.xml  mass_action_undr1.xml  mass_action_undr2.xml  metabolic_cycle.xml  michaelis_menten_mm.xml  michaelis_menten_mmcat.xml  mixed_pathway_1.xml  reversible_mm_rmm.xml  reversible_mm_rmmcat.xml  reversible_pathway.xml
docs/source/: API.rst  appendix.rst  check_reference.rst  classifications.rst  conf.py  custom_classifications.rst  errors_and_warnings.rst  index.rst  installation.rst  modules.rst  quickstart.rst  ratesb_python.common.rst  ratesb_python.rst  tests.rst  usage.rst
examples/: classification_tutorial.json  complex_example.py  custom_classification.json  simple_example.py
paper/: paper.bib  paper.md  paper.yaml
ratesb_python/: __init__.py
ratesb_python/common/: analyzer.py  custom_classifier.py  default_classifier.json  messages.json  reaction_data.py  results.py  util.py
tests/: test_analyzer.py  test_classifier.py  test_results.py  test_util.py
tests/test_classifier_models/: amm.ant  bidr.ant  bidr_a.ant  false.ant  hill.ant  imm.ant  mm.ant  mmcat.ant  rmm.ant  rmmcat.ant  undr.ant  undr_a.ant  validation_problems.json  zero.ant
tests/test_models/: 1.ant  false_0001.ant  false_0002.ant  false_1001.ant  false_1002.ant  false_1003.ant  false_1004.ant  false_1005.ant  false_1006.ant  false_1010.ant  false_1020.ant  false_1021.ant  false_1022.ant  false_1030.ant  false_1031.ant  false_1032.ant  false_1033.ant  false_1034.ant  false_1035.ant  false_1036.ant  false_1037.ant  false_1040.xml  false_1041.xml  false_1042.xml  false_1043.xml  false_1044.xml  rate_laws.json  reversible_MM.ant  reversible_MM.json  test_util.ant  test_util.json  true_0002.ant  (+19 more)
