[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratesb_python"
version = "0.2.3"
description = "rate law analysis for systems biology"
authors = [{name = "Longxuan Fan", email = "longxuan@usc.edu"}]
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools]
packages = ["ratesb_python"]
include_package_data = true

# If you want to be more explicit about which files to include
[tool.setuptools.package_data]
"ratesb_python.ratesb_python.common" = ["*.json"]