[metadata]
name = ratesb_python
version = 0.2.3
author = Longxuan Fan
author_email = longxuan@usc.edu
description = package for analyzing the rate laws in an SBML or Antimony model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sys-bio/ratesb_python
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    antimony
    sbmlkinetics
    sympy
    python-libsbml

[options.package_data]
ratesb_python.common = *.json